force-app/main/default/objects/Airports__c/Airports__c.object-meta.xml
<CustomObject>
    <description>Object to store list of airports and related information.</description>
    <label>Airport</label>
    <nameField>
        <label>Airport Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Airports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>