force-app/main/default/objects/Airports__c/fields/IATA_Code__c.field-meta.xml
<CustomField>
    <fullName>IATA_Code__c</fullName>
    <label>IATA Code</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
</CustomField>