force-app/main/default/objects/Airports__c/fields/ICAO_Code__c.field-meta.xml
<CustomField>
    <fullName>ICAO_Code__c</fullName>
    <label>ICAO Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>