force-app/main/default/objects/Airports__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Country_Code__c</columns>
    <columns>Region__c</columns>
    <columns>IATA_Code__c</columns>
    <columns>Location__Latitude__s</columns>
    <columns>Location__Longitude__s</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>